[gd_scene load_steps=7 format=3 uid="uid://cyb6o20pll60i"]

[ext_resource type="Script" path="res://pause_menu.gd" id="1_cmg43"]
[ext_resource type="Shader" path="res://pause_menu.gdshader" id="1_yq6ok"]

[sub_resource type="ShaderMaterial" id="ShaderMaterial_3lito"]
shader = ExtResource("1_yq6ok")
shader_parameter/lod = 0.85

[sub_resource type="Animation" id="Animation_exfhj"]
resource_name = "Blur"
length = 0.3
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("ColorRect:material")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [SubResource("ShaderMaterial_3lito")]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("PanelContainer:modulate")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.3),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Color(1, 1, 1, 0), Color(1, 1, 1, 1)]
}

[sub_resource type="Animation" id="Animation_i1evt"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("ColorRect:material")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [SubResource("ShaderMaterial_3lito")]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("PanelContainer:modulate")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(1, 1, 1, 0)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_30up2"]
_data = {
"Blur": SubResource("Animation_exfhj"),
"RESET": SubResource("Animation_i1evt")
}

[node name="PauseMenu" type="Control"]
process_mode = 3
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 6.0
offset_top = 4.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_cmg43")

[node name="ColorRect" type="ColorRect" parent="."]
material = SubResource("ShaderMaterial_3lito")
layout_mode = 0
offset_left = 149.0
offset_top = 77.0
offset_right = 995.0
offset_bottom = 582.0

[node name="PanelContainer" type="PanelContainer" parent="."]
modulate = Color(1, 1, 1, 0)
layout_mode = 0
offset_left = 147.0
offset_top = 75.0
offset_right = 991.0
offset_bottom = 583.0

[node name="VBoxContainer" type="VBoxContainer" parent="PanelContainer"]
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4

[node name="Resume" type="Button" parent="PanelContainer/VBoxContainer"]
custom_minimum_size = Vector2(300, 75)
layout_mode = 2
size_flags_vertical = 4
theme_override_font_sizes/font_size = 40
text = "Resume"

[node name="Restart" type="Button" parent="PanelContainer/VBoxContainer"]
custom_minimum_size = Vector2(0, 75)
layout_mode = 2
theme_override_font_sizes/font_size = 40
text = "Restart"

[node name="Settings" type="Button" parent="PanelContainer/VBoxContainer"]
custom_minimum_size = Vector2(300, 75)
layout_mode = 2
theme_override_font_sizes/font_size = 40
text = "Settings"

[node name="MainMenu" type="Button" parent="PanelContainer/VBoxContainer"]
custom_minimum_size = Vector2(300, 75)
layout_mode = 2
theme_override_font_sizes/font_size = 40
text = "Main Menu"

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_30up2")
}

[connection signal="pressed" from="PanelContainer/VBoxContainer/Resume" to="." method="_on_resume_pressed"]
[connection signal="pressed" from="PanelContainer/VBoxContainer/Restart" to="." method="_on_restart_pressed"]
[connection signal="pressed" from="PanelContainer/VBoxContainer/Settings" to="." method="_on_settings_pressed"]
[connection signal="pressed" from="PanelContainer/VBoxContainer/MainMenu" to="." method="_on_main_menu_pressed"]
